--- a/Astro_Front/src/components/admin/billing/container/NexBranchList.astro
+++ b/Astro_Front/src/components/admin/billing/container/NexBranchList.astro
@@ -84,7 +84,14 @@ export { users, errorLoadingData, error }
                             <a
                               href="#"
                               class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-orange-600 dark:hover:text-white"
-                              >Descargar</a
+                              >Descargar pdf</a
+                            >
+                          </li>
+                                                   <li>
+                            <a
+                              href="#"
+                              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-orange-600 dark:hover:text-white"
+                              >Descargar csv</a
                             >
                           </li>
                           <li>
