--- a/Astro_Front/src/components/login/NEXForm.astro
+++ b/Astro_Front/src/components/login/NEXForm.astro
@@ -1,9 +1,10 @@
+<!-- NEXForm.astro -->
+---
+import { createEffect } from 'react';
 ---
 
----
-
-<form method="GET" class="sign-in-form" action="/admin">
-  <h2 class="title">Iniciar Seccion</h2>
+<form method="Post" class="sign-in-form" action="/admin" use:createEffect>
+  <h2 class="title">Iniciar Sesión</h2>
   <div class="input-field">
     <i class="fas fa-user"></i>
     <input
@@ -29,3 +30,18 @@
   </div>
   <button type="submit" value="Ingresar" class="btn2 solid">Ingresar</button>
 </form>
+
+<@script>
+  createEffect(() => {
+    document.querySelector('.sign-in-form').addEventListener('submit', async (event) => {
+      event.preventDefault();
+      
+      const formData = new FormData(event.target);
+      const email = formData.get('email');
+      const password = formData.get('password');
+
+      // Llama a la función de prop onFormSubmit con los datos del formulario
+      onFormSubmit({ email, password });
+    });
+  });
+</@script>
