--- a/Python-Flask/app/templates/distribucion.html
+++ b/Python-Flask/app/templates/distribucion.html
@@ -1,42 +1,27 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Distribución de Gastos por Categoría</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-    <h1>Distribución de Gastos por Categoría</h1>
-    <canvas id="myChart"></canvas>
-    <p>{{ descripcion }}</p>
+chile
+Resumen:analiza los gastos de un usuario, los organiza por categoría y calcula el total de gastos.
+ Luego, utiliza inteligencia artificial para generar un informe detallado que 
+ayuda al usuario a entender mejor sus patrones de gasto y ofrece consejos para mejorar 
+la gestión financiera.
+http://127.0.0.1:5000/api/gastos
 
-    <script>
-        var distribucion_gastos = {{ distribucion_gastos | tojson }};
+Resumen: se encarga de obtener y mostrar la distribución de gastos por categoría
+http://127.0.0.1:5000/api/distribucion-gastos-por-categoria
 
-        var ctx = document.getElementById('myChart').getContext('2d');
-        var myChart = new Chart(ctx, {
-            type: 'line', // Cambiar el tipo de gráfico a lineal
-            data: {
-                labels: Object.keys(distribucion_gastos),
-                datasets: [
-                    {
-                        label: 'Monto de Gastos (BS)',
-                        data: Object.values(distribucion_gastos),
-                        backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                        borderColor: 'rgba(255, 99, 132, 1)',
-                        borderWidth: 1
-                    },
-                ]
-            },
-            options: {
-                scales: {
-                    y: {
-                        beginAtZero: true
-                    }
-                }
-            }
-        });
-    </script>
-</body>
-</html>
+Resumen: se encarga de obtener los 5 principales categorías de gastos.
+http://127.0.0.1:5000/api/gastos-categoria-top5
+
+Resumen: se encarga de obtener el promedio de gastos por día, mes y año.
+http://127.0.0.1:5000/api/promedio-gastos
+
+oscar
+Resumen: se encarga de obtener el presupuesto total de cada usuario , teniendo cuenta
+cambio_mensual_promedio, crecimiento_presupuesto
+Crecimiento del presupuesto: Mide cómo ha cambiado el presupuesto en términos porcentuales entre dos momentos específicos en el tiempo.
+Duración del presupuesto: Determina la cantidad de días que abarca cada presupuesto.
+Promedio mensual del presupuesto: Estima cuánto dinero se gasta en promedio cada mes durante el periodo de cada presupuesto.
+Cambio mensual promedio del presupuesto: Calcula el porcentaje promedio de cambio en el presupuesto de un mes a otro.
+
+http://127.0.0.1:5000/api/presupuesto-total
+
+,duraciones,promedios_mensuales
