Front kpi mejorado

--- a/Astro_Front/src/components/admin/billing/container/NexBranchList.astro
+++ b/Astro_Front/src/components/admin/billing/container/NexBranchList.astro
@@ -84,14 +84,7 @@ export { users, errorLoadingData, error }
                             <a
                               href="#"
                               class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-orange-600 dark:hover:text-white"
-                              >Descargar pdf</a
-                            >
-                          </li>
-                                                   <li>
-                            <a
-                              href="#"
-                              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-orange-600 dark:hover:text-white"
-                              >Descargar csv</a
+                              >Descargar</a
                             >
                           </li>
                           <li>
