--- a/Astro_Front/src/components/login/NEXFormDate.astro
+++ b/Astro_Front/src/components/login/NEXFormDate.astro
@@ -2,8 +2,8 @@
 import { Image } from 'astro:assets';
 import imgLogo from '@images/cliente/Logo.png';
 const login = {
-  name: 'Presupuesto',
-  branch: 'Tu nuevo sistema de presupuesto personal. Administra tu dinero, alcanza tus metas.'
+  name: 'Sw2. Presupuesto',
+  branch: 'Sotware para prespuesto personales.'
 }
 ---
 
