--- a/Astro_Front/src/components/admin/branch/create/NexFormBranch.astro
+++ b/Astro_Front/src/components/admin/branch/create/NexFormBranch.astro
@@ -1,36 +1,11 @@
----
-import { Image } from 'astro:assets'
-import map from '@images/caja/mapa.png'
-import avatar from '@images/caja/usuario.jpg'
----
 
 <form class="space-y-6 p-1 py-1">
   <div class="space-y-12 rounded-lg p-1 shadow">
     <div class="border-b border-gray-900/10 pb-1">
       <label for="last-name" class="mb-2 block text-xl font-medium text-white"
-        >Registrar Presupuesto</label
+        >Registrar Categoria</label
       >
-      <h2 class="text-base font-semibold leading-7 text-white">Informacion Presupuesto</h2>
-      <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-        <div class="col-span-full">
-          <label for="first-name" class="block text-sm font-medium leading-6 text-white"
-            >Nombre</label
-          >
-          <div class="mt-2">
-            <input
-              style="background-color: #181B3A;"
-              type="text"
-              name="first-name"
-              id="first-name"
-              autocomplete="first-name"
-              placeholder="Nombre de la categoria"
-              required=""
-              class="block w-full rounded-md border-0 p-2.5 py-2 text-white shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset
-                      focus:ring-orange-600 sm:text-sm sm:leading-6"
-            />
-          </div>
-        </div>
-      </div>
+      <h2 class="text-base font-semibold leading-7 text-white">Informacion Categorias</h2>
       <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
         <div class="col-span-full">
           <label for="first-name" class="block text-sm font-medium leading-6 text-white"
@@ -51,75 +26,10 @@ import avatar from '@images/caja/usuario.jpg'
           </div>
         </div>
       </div>
-
-      <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-        <div class="col-span-full">
-          <label for="first-name" class="block text-sm font-medium leading-6 text-white"
-            >Monto</label
-          >
-          <div class="mt-2">
-            <input
-              style="background-color: #181B3A;"
-              type="text"
-              name="first-name"
-              id="first-name"
-              autocomplete="first-name"
-              placeholder="Nombre de la categoria"
-              required=""
-              class="block w-full rounded-md border-0 p-2.5 py-2 text-white shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset
-                      focus:ring-orange-600 sm:text-sm sm:leading-6"
-            />
-          </div>
-        </div>
-      </div>
-
-
-                  <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-        <div class="col-span-full">
-          <label for="first-name" class="block text-sm font-medium leading-6 text-white"
-            >Fecha Inicio</label
-          >
-          <div class="mt-2">
-            <input
-              style="background-color: #181B3A;"
-              type="text"
-              name="first-name"
-              id="first-name"
-              autocomplete="first-name"
-              placeholder="Nombre de la categoria"
-              required=""
-              class="block w-full rounded-md border-0 p-2.5 py-2 text-white shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset
-                      focus:ring-orange-600 sm:text-sm sm:leading-6"
-            />
-          </div>
-        </div>
-      </div>
-
-                        <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-        <div class="col-span-full">
-          <label for="first-name" class="block text-sm font-medium leading-6 text-white"
-            >Fecha Final</label
-          >
-          <div class="mt-2">
-            <input
-              style="background-color: #181B3A;"
-              type="text"
-              name="first-name"
-              id="first-name"
-              autocomplete="first-name"
-              placeholder="Nombre de la categoria"
-              required=""
-              class="block w-full rounded-md border-0 p-2.5 py-2 text-white shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset
-                      focus:ring-orange-600 sm:text-sm sm:leading-6"
-            />
-          </div>
-        </div>
-      </div>
-      	
     </div>
   </div>
   <div class="border-b border-gray-900/10 pb-2">
-    <h2 class="leading-2 text-base font-semibold text-white">Presupuesto</h2>
+    <h2 class="leading-2 text-base font-semibold text-white">Categorias</h2>
     <p class="text-sm leading-6 text-white">
       Esta información se mostrará públicamente, así que tenga cuidado con lo que comparte.
     </p>
