--- a/Astro_Front/src/components/admin/overview/card/NEXTransaction.astro
+++ b/Astro_Front/src/components/admin/overview/card/NEXTransaction.astro
@@ -1,10 +1,5 @@
 ---
-import { Image } from 'astro:assets'
-import imgLogo from '@images/cliente/Logo.png'
-import NEXTransaction from './NEXTransaction.tsx'
-const login = {
-  name: 'Presupuesto'
-}
+import NEXTransactiont from './NEXTransaction.tsx'
 ---
 
 <div
@@ -27,7 +22,7 @@ const login = {
       </p>
     </div>
     <div class="block w-full overflow-x-auto">
-      <NEXTransaction client:only />
+      <NEXTransactiont client:only />
     </div>
   </div>
 </div>
